gh-32 Fixed fixed header z-index issue

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -7,7 +7,7 @@
   header.site-header {
     position: fixed;
     background-color: white;
-    z-index: 3;
+    z-index: 3 !important;
     box-shadow: 0 6px 17px 0 rgba(37, 41, 54, 0.13);
 
     .logo {
